# ticket_count

./: README.md  main.py  pyproject.toml
src/my_package/: __init__.py
src/my_package/module1/: __init__.py  count_tickets_status.py  delete_resolved_txt.py  extract_docx_info.py  move_docx.py  nrb_ticket.py  read_docx.py  txt_file.py
src/my_package/utils/: __init__.py  decorators.py
